<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="70dp">

        <ImageButton
            android:id="@+id/logoutButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/holo_purple"
            android:contentDescription="@string/cerrarSesion"
            android:src="@drawable/baseline_logout_24" />
        <ImageButton
            android:layout_width="150dp"
            android:layout_height="20dp"/>


        <ImageButton
            android:id="@+id/canjearButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/holo_purple"
            android:contentDescription="@string/canjear"
            android:src="@drawable/baseline_local_offer_24"/>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="40dp"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_green"
            >

            <!-- ImageView -->
            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/Photo"
                android:src="@drawable/baseline_person_outline_24" />

            <!-- TextViews -->
            <TextView
                android:id="@+id/UsuarioTituloTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profileImageView"
                android:layout_centerHorizontal="true"
                android:text="@string/UsuarioT"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/UsuarioTituloTextView"
                android:layout_centerHorizontal="true"
                android:text="@string/Usuario"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/emailTituloTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTextView"
                android:layout_centerHorizontal="true"
                android:text="@string/EmailT"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTituloTextView"
                android:layout_centerHorizontal="true"
                android:text="@string/Email"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pointsTituloTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTextView"
                android:layout_centerHorizontal="true"
                android:text="@string/PuntosT"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pointsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pointsTituloTextView"
                android:layout_centerHorizontal="true"
                android:text="@string/Puntos"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"/>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
