<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="180dp"
    android:layout_marginEnd="20dp"
    app:cardBackgroundColor="@color/dark_olive_green"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_green"
        android:padding="16dp">

        <TextView
            android:id="@+id/soporteIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/josefin_sans_bold"
            android:gravity="center"
            android:text="@string/soporteIntro"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <!-- Campo de correo electrónico -->
        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/soporteIntro"
            android:layout_marginTop="20dp"
            android:autofillHints="phone"
            android:hint="@string/insertarNumero"
            android:inputType="phone"
            android:textColor="@color/white" />


        <!-- Campo de mensaje -->
        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/editTextPhone"
            android:autofillHints=""
            android:hint="@string/editText"
            android:inputType="textMultiLine"
            android:maxLength="150"
            android:maxLines="5"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextMessage"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="120dp"
            android:gravity="center"
            android:text="@string/send" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonSend"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/josefin_sans_bold"
            android:gravity="center"
            android:text="@string/supportText"
            android:textColor="@color/white" />

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>

