<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    tools:context=".HomeFragment"
    android:layout_gravity="center"
    android:orientation="vertical">

    <!-- Texto ScrollView 1 -->
    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginStart="80dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:fontFamily="@font/josefin_sans_bold"
        android:padding="15dp"
        android:text="@string/intro"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textAlignment="center"/>

    <!-- Texto ScrollView 2 -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_sans_bold"
        android:padding="15dp"
        android:text="@string/intro2"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>

    <!-- Texto ScrollView 3 -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_sans_bold"
        android:padding="15dp"
        android:text="@string/intro3"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_below="@id/textView2"
        android:textAlignment="center"/>

</LinearLayout>
