<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecycleFragment">


    <TextView
        android:id="@+id/text_title"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="80dp"
        android:background="@color/sea_green"
        android:drawableStart="@drawable/outline_recycling_24"
        android:drawableEnd="@drawable/outline_recycling_24"
        android:drawablePadding="8dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:gravity="center"
        android:text="@string/puntos"
        android:textSize="24dp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_title">
        <GridLayout
            android:layout_width="238dp"
            android:layout_height="434dp"
            android:layout_gravity="center"
            android:layout_marginTop="34dp"
            android:background="@color/sea_green"
            android:columnCount="4"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:rowCount="4">

            <!-- Material 1 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/josefin_sans_bold"
                    android:text="@string/material1"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/plastico" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/josefin_sans_bold"
                    android:text="@string/plasticoPuntos"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/plastico"
                    android:layout_width="70dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:text="+"
                    android:textSize="24dp" />
            </LinearLayout>

            <!-- Material 2 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/josefin_sans_bold"
                    android:text="@string/material3"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/metal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/josefin_sans_bold"
                    android:text="@string/metalPuntos"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/metal"
                    android:layout_width="74dp"
                    android:layout_height="48dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="center_horizontal"
                    android:text="+"
                    android:textSize="24dp" />
            </LinearLayout>

            <!-- Material 4 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/josefin_sans_bold"
                    android:text="@string/material4"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/vidrio" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/josefin_sans_bold"
                    android:text="@string/vidrioPuntos"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/vidrio"
                    android:layout_width="72dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:text="+"
                    android:textSize="24dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/josefin_sans_bold"
                    android:text="@string/material2"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/papel_carton_trat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/josefin_sans_bold"
                    android:text="@string/papelPuntos"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/papel"
                    android:layout_width="68dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:text="+"
                    android:textSize="24dp" />
            </LinearLayout>


        </GridLayout>
    </FrameLayout>
</RelativeLayout>
