<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailedActivity"
    android:background="@drawable/wp4713044_green_and_white_wallpapers">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailName"
        android:layout_marginTop="14dp"
        android:text="@string/sanJuan"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:fontFamily="@font/josefin_sans_bold"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:textAlignment="center"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardImage"
        android:layout_width="267dp"
        android:layout_height="167dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp">

        <ImageView
            android:id="@+id/detailImage"
            android:layout_width="240dp"
            android:layout_height="140dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="10dp"
            android:src="@drawable/andalucia" />

    </androidx.cardview.widget.CardView>

    <!-- New TextView for Description -->
    <TextView
        android:id="@+id/detailDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/descsanJuan"
        android:textSize="16sp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/detailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/light_purple"
        android:text="@string/verNoticia"
        android:textSize="16sp"
        android:textColor="@color/white"/>

</LinearLayout>
